<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/default_overflow_menu_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:onClick="openDefaultOverflowMenu"
            android:text="@string/default_overflow_menu"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/custom_overflow_menu_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:onClick="openCustomOverflowMenu"
            android:text="@string/custom_overflow_menu"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/styled_overflow_menu_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:onClick="openStyledOverflowMenu"
            android:text="@string/style_overflow_menu"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>